--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
-    hello initializing
+<body class="inter-font">
+    <nav>
+        <h3>Tech<span>Wave</span></h3>
+        <div>
+            <a href="" class="">About</a>
+            <a href="" class="">Episodes</a>
+            <a href="" class="">Host</a>
+        </div>
+        <button>Subscribe <i class="fa-solid fa-arrow-right"></i></button>
+        <img src="./assets/hamburger-menu.png" alt="menu icon">
+    </nav>
+    
 </body>
 </html>
