added the banner part

--- a/index.html
+++ b/index.html
@@ -18,6 +18,28 @@
         <button>Subscribe <i class="fa-solid fa-arrow-right"></i></button>
         <img src="./assets/hamburger-menu.png" alt="menu icon">
     </nav>
+
+    <section id="hero-container">
+        <div class="hero-content">
+            <div class="hero-image">
+                <img src="./assets/hero-circle.png" class="background-logo" alt="a gradient image">
+                <img src="./assets/microphone.png" class="logo-image" alt="a microphone image">
+                <span class="badge">NEW</span>
+
+            </div>
+
+            <h2>TechWave</h2>
+
+            <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
+
+            <div class="hero-btn">
+                <button class="btn1"><img src="./assets/spotify.png" alt="spotify logo"><span>Listen on Spotify</span></button>
+                <button class="btn2"><img src="./assets/message.png" alt="message logo"><span>Subscribe</span></button>
+            </div>
+        </div>
+        
+
+    </section>
     
 </body>
 </html>
