--- a/index.html
+++ b/index.html
@@ -40,6 +40,33 @@
         
 
     </section>
+
+    <section id="about-container">
+        <div class="about-info">
+            <h3>About the Podcast</h3>
+            <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology. We break down complex topics into digestible insights, explore productivity strategies that actually work, and share stories of personal growth from industry leaders.</p>
+            <h5>Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</h5>
+        </div>
+
+        <div class="about-grid">
+            <div class="box">
+                <h2>150K+</h2>
+                <p>Monthly Listeners</p>
+            </div>
+            <div class="box">
+                <h2>200+</h2>
+                <p>Episodes Published</p>
+            </div>
+            <div class="box">
+                <h2>4.9★</h2>
+                <p>Average Rating</p>
+            </div>
+            <div class="box">
+                <h2>50+</h2>
+                <p>Industry Experts</p>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
