added the footer part

--- a/index.html
+++ b/index.html
@@ -187,6 +187,22 @@
         </div>
 
     </section>
+
+    <section id="footer">
+
+        <h2>Tech<span>Wave</span></h2>
+
+        <div class="footer-logo-container">
+            <div class="logo-1"><img src="./assets/spotify.png" alt="spotify-logo"><span>Spotify</span></div>
+            <div class="logo-2"><img src="./assets/apple-podcast.png" alt="podcast-logo"><span>Apple Podcasts</span></div>
+            <div class="logo-3"><img src="./assets/youtube-podcast.png" alt="podcast-logo"><span>YouTube</span></div>
+            <div class="logo-4"><img src="./assets/twitter.png" alt="twitter-logo"><span>Twitter</span></div>
+        </div>
+
+        <p>© 2026 TechWave Podcast. All rights reserved.</p>
+
+
+    </section>
     
 </body>
 </html>
